fix(cf): the warning prompt is in the wrong position (#480)

--- a/packages/sheets-conditional-format/src/components/panel/rule-edit/index.module.less
+++ b/packages/sheets-conditional-format/src/components/panel/rule-edit/index.module.less
@@ -8,6 +8,9 @@
     .text {
         font-size: var(--font-size-xxs);
     }
+    .position-relative {
+        position: relative;
+    }
 
     .btn-list {
         display: flex;
